--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GATES | DOST-ASTI</title>
     </style>
     <!-- CSS Files -->
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="/css/home.css" />
     <link rel="stylesheet" href="css/search.css" />
     <link rel="stylesheet" href="css/header-footer.css" />
     <link rel="stylesheet" href="css/slideshow.css" />
@@ -119,3 +119,4 @@
 
 
 </html>
+
