--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>GATES | DOST-ASTI</title>
     </style>
     <!-- CSS Files -->
-    <link rel="stylesheet" href="/css/home.css" />
-    <link rel="stylesheet" href="css/search.css" />
-    <link rel="stylesheet" href="css/header-footer.css" />
-    <link rel="stylesheet" href="css/slideshow.css" />
-    <link rel="stylesheet" href="css/search.css" />
+    <link rel="stylesheet" href="/asti-gates-profile.github.io/css/home.css" />
+    <link rel="stylesheet" href="/asti-gates-profile.github.io/css/search.css" />
+    <link rel="stylesheet" href="/asti-gates-profile.github.io/css/header-footer.css" />
+    <link rel="stylesheet" href="/asti-gates-profile.github.io/css/slideshow.css" />
+    <link rel="stylesheet" href="/asti-gates-profile.github.io/css/search.css" />
     <script src="../js/components.js"></script>
     <script src="../js/search.js"></script>
     <script src="../js/page-indicator.js"></script>
@@ -119,4 +119,5 @@
 
 
 </html>
+
 
