--- a/html/ai.html
+++ b/html/ai.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/search.css">
-    <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="../js/components.js" defer></script>
+    <script src="../js/redirect.js" defer></script>
 
 
 </head>
