--- a/html/platform.html
+++ b/html/platform.html
@@ -6,8 +6,10 @@
     <title>Platform Team</title>
     <link rel="stylesheet" href="../css/platform.css">
     <link rel="stylesheet" href="../css/header-footer.css">
-    <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
+    <link rel="stylesheet" href="../css/components.css">
+    <link rel="stylesheet" href="../css/search.css">
+    <script src="../js/components.js" defer></script>
+    <script src="../js/redirect.js" defer></script>
 
 
 </head>
